# opencv-camera-calibrations

./: .gitignore  CLAUDE.md  CMakeLists.txt  GEMINI.md  README.md  camera_calibration_v4_11_0.cpp  main.cpp  out_camera_data.xml  tis_cam.xml
config/: calibrations.yaml  tis-cam-calibration-images.xml  tis_cam.xml
outputs/: out_camera_data.xml
scripts/: calibration_manager.py  cam_calibration.py
src/: 3calibration.cpp  3calibration_headless.cpp
